代码生成器功能完善